# procman

./: Cargo.toml  README.md  processes.toml  templates.toml  test.toml
src/: check_run_once.rs  cli_params.rs  gen_simple_process_toml.rs  main.rs  one_shot.rs  read_config_file.rs  remove_old_status.rs  watch_now.rs
src/one_shot/: cfg_actived_not_in_watched.rs  create.rs  filter_config_by_dependencies.rs  get_running_status.rs  imp.rs  launch_process.rs  move2stop_check_health.rs  move2stop_modif_signature.rs  move2stop_pid_missing_on_system.rs  move2stopping_modif_applyon.rs  not_actived_config.rs  run_before_cmd.rs  run_init_cmd.rs  save.rs  stopped_with_active_cfg.rs  try_stop.rs
src/one_shot/imp/: save.rs
src/one_shot/running_status/imp/: check_start_held_processes.rs  del_if_missing_pid.rs  launch_ready2start.rs
src/sup/: template.rs
src/tui/: choose_file.rs  mod.rs  processes.rs  render_processes.rs
src/types/: config.rs  mod.rs  running_status.rs
src/types/config/: imp.rs  tests.rs
src/types/config/imp/: expand_template.rs
src/types/running_status/: imp.rs
src/watch_now/: cfg_actived_not_in_watched.rs  check_waitting_pid_file.rs  create.rs  delete_old_stopped.rs  filter_config_by_dependencies.rs  filter_config_one_shot.rs  get_running_status.rs  launch_process.rs  move2stop_check_health.rs  move2stop_modif_signature.rs  move2stop_pid_missing_on_system.rs  move2stopping_modif_applyon.rs  move2too_much_runs.rs  move4too_much_runs.rs  not_actived_config.rs  run_before_cmd.rs  run_init_cmd.rs  save.rs  stopped_with_active_cfg.rs  try_stop.rs
(+11 files in other folders)
