[package]
name = "procman"
version = "0.1.0"
edition = "2021"
description = "Declarative service/processes manager"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
nix = "0.26"
# nix = { version = "0.27", features = ["prctl"] }
uuid = { version = "1.3", features = ["v4"] }
procfs = "0.17.0"
clap = { version = "4.5.37", features = ["derive"] }
clap_derive = "=4.5.32"
fs2 = "0.4.3"
# log = "0.4.27"
# flexi_logger = "0.30.1"
# libc = { version = "0.2" }
# sha1 = "0.10"
ratatui = "0.20"
crossterm = "0.26"
ctrlc = "3.4.6"
lazy_static = "1.5.0"
humantime-serde = "1.1.1"
minijinja = "2.9.0"
regex = "1.11.1"
